# CudaFire

./: CMakeLists.txt  README.md  cuda-wildfire-simulator.sln  cuda-wildfire-simulator.vcxproj
data/: dixie_fuel_unmatched.tif
include/: gl_viewer.h  rothermel.cuh  simulation.cuh  terrain.h
include/glad/: glad.h
src/: gl_viewer.cpp  glad.c  main.cpp  rothermel.cu  simulation.cu  terrain.cpp
